169-Fixed-Blurring in login and added more feedback

--- a/Web-App/Frontend/src/app/components/login/login.component.scss
+++ b/Web-App/Frontend/src/app/components/login/login.component.scss
@@ -1,5 +1,10 @@
 @import"../../color.scss";
 
+.blurred {
+  filter: blur(3px);
+  opacity: 0.5;
+}
+
 .login {
   width: 300px;
   margin: 50px auto;
